-Added support for sending push notification to Google Cloud Messaging devices -Added support for registering devices against an alias -Added jsonDictionary Serialization Helper -Added PlatformBase implementations for GCM -updated README.md file with examples

--- a/UrbanAirship/UrbanAirship.csproj
+++ b/UrbanAirship/UrbanAirship.csproj
@@ -44,6 +44,9 @@
   <ItemGroup>
     <Compile Include="Client.cs" />
     <Compile Include="Configuration\UrbanAirshipSection.cs" />
+    <Compile Include="Extensibility\JsonDictionary.cs" />
+    <Compile Include="GCMPlatform.cs" />
+    <Compile Include="GCMPushDetails.cs" />
     <Compile Include="iOSPlatform.cs" />
     <Compile Include="iOSPushDetails.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
